maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:18: error: too many arguments for method suitChemin: ()Unit
  suitChemin(getX(),getY())
            ^